--- a/checkbox.html
+++ b/checkbox.html
@@ -11,7 +11,7 @@
         <script src="assets/jquery-1.11.1.min.js"></script>
         <script src="assets/demo.js"></script>
     </head>
-    <body class="p2">
+    <body class="ui-m3">
         <div id="layout" class="ui-g">
             <div class="ui-u-1-5">
                 <ul id="navigator-features" class="ui-list-unstyled">
@@ -24,7 +24,7 @@
                 </ul>
             </div>
             <div class="ui-u-4-5">
-                <div id="main" class="content p2 no-pt">
+                <div id="main" class="content ui-p2 ui-pt0">
                     <h2 id="icons" class="no-mt">单选和复选框（Checkbox &amp; Radiobox）</h2>
                     <div class="ui-divider"></div>
                     <p>
@@ -53,15 +53,15 @@
                             </div>
                             <h4>2. 你喜欢的菜系？</h4>
                             <div>
-                                <div class="ui-checkbox ui-block mb1">
+                                <div class="ui-checkbox ui-block ui-mb1">
                                     <input type="checkbox" id="unique-id-4">
                                     <label for="unique-id-4">川菜</label>
                                 </div>
-                                <div class="ui-checkbox ui-block mb1">
+                                <div class="ui-checkbox ui-block ui-mb1">
                                     <input type="checkbox" checked="checked" id="unique-id-5">
                                     <label for="unique-id-5">鲁菜</label>
                                 </div>
-                                <div class="ui-checkbox ui-block mb1">
+                                <div class="ui-checkbox ui-block ui-mb1">
                                     <input type="checkbox" id="unique-id-6">
                                     <label for="unique-id-6">淮扬菜</label>
                                 </div>
@@ -75,15 +75,15 @@
                         <div class="example">
                             <h4>1. 你喜欢你工作的公司吗？</h4>
                             <div>
-                                <div class="ui-radio ui-block mb1">
+                                <div class="ui-radio ui-block ui-mb1">
                                     <input type="radio" checked="checked" id="unique-id-7" name="company">
                                     <label for="unique-id-7">喜欢</label>
                                 </div>
-                                <div class="ui-radio ui-block mb1">
+                                <div class="ui-radio ui-block ui-mb1">
                                     <input type="radio" id="unique-id-8" name="company">
                                     <label for="unique-id-8">没感觉</label>
                                 </div>
-                                <div class="ui-radio ui-block mb1">
+                                <div class="ui-radio ui-block ui-mb1">
                                     <input type="radio" id="unique-id-9" name="company">
                                     <label for="unique-id-9">不喜欢</label>
                                 </div>
