--- a/css-grid.html
+++ b/css-grid.html
@@ -11,7 +11,7 @@
         <script src="assets/jquery-1.11.1.min.js"></script>
         <script src="assets/demo.js"></script>
     </head>
-    <body class="p2">
+    <body class="ui-m3">
         <div id="layout" class="ui-g">
             <div class="ui-u-1-5">
                 <ul id="navigator-features" class="ui-list-unstyled">
@@ -27,7 +27,7 @@
                 </ul>
             </div>
             <div class="ui-u-4-5">
-                <div id="main" class="content p2 no-pt">
+                <div id="main" class="content ui-p2 ui-pt0">
                     <h2 class="no-mt">CSS栅格</h2>
                     <div class="ui-divider"></div>
                     <p>
@@ -54,27 +54,27 @@
                         </p>
                         <div class="example">
                             <div class="grid-demo">
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-1-5">
                                         1/5
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-2-5">
                                         2/5
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-3-5">
                                         3/5
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-4-5">
                                         4/5
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-1">
                                         5/5
                                     </div>
@@ -88,122 +88,122 @@
                         </p>
                         <div class="example">
                             <div class="grid-demo">
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-1-24">
                                         1/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-2-24">
                                         2/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-3-24">
                                         3/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-4-24">
                                         4/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-5-24">
                                         5/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-6-24">
                                         6/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-7-24">
                                         7/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-8-24">
                                         8/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-9-24">
                                         9/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-10-24">
                                         10/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-11-24">
                                         11/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-12-24">
                                         12/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-13-24">
                                         13/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-14-24">
                                         14/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-15-24">
                                         15/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-16-24">
                                         16/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-17-24">
                                         17/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-18-24">
                                         18/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-19-24">
                                         19/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-20-24">
                                         20/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-21-24">
                                         21/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-22-24">
                                         22/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-23-24">
                                         23/24
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-1">
                                         24/24
                                     </div>
@@ -217,22 +217,22 @@
                         </p>
                         <div class="example">
                             <div class="grid-demo">
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-offset-4-5 ui-u-1-5">
                                         1/5
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-offset-3-5 ui-u-2-5">
                                         2/5
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-offset-2-5 ui-u-3-5">
                                         3/5
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-offset-1-5 ui-u-4-5">
                                         4/5
                                     </div>
@@ -246,7 +246,7 @@
                         </p>
                         <div class="example">
                             <div class="grid-demo">
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-block-center ui-u-1-5">
                                         1/5
                                     </div>
@@ -260,12 +260,12 @@
                         </p>
                         <div class="example">
                             <div class="grid-demo">
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-golden-ratio">
                                         0.618
                                     </div>
                                 </div>
-                                <div class="ui-g mb1">
+                                <div class="ui-g ui-mb1">
                                     <div class="ui-u-golden-ratio-1">
                                         0.382
                                     </div>
