--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
         <script src="assets/jquery-1.11.1.min.js"></script>
         <script src="assets/demo.js"></script>
     </head>
-    <body class="p2">
+    <body class="ui-m3">
         <div id="layout" class="ui-g">
             <div class="ui-u-1-5">
                 <ul id="navigator-features" class="ui-list-unstyled">
@@ -21,7 +21,7 @@
                 </ul>
             </div>
             <div class="ui-u-4-5">
-                <div id="main" class="content p2 no-pt">
+                <div id="main" class="content ui-p2 ui-pt0">
                     <h2>表单（Form）</h2>
                     <div class="ui-divider"></div>
                     <p>
@@ -189,7 +189,7 @@
                             <div class="form-row">
                                 <div class="field">
                                     <label class="block-label" for="state">职业</label>
-                                    <div class="mb1">
+                                    <div class="ui-mb1">
                                         <div class="ui-checkbox">
                                             <input type="checkbox" id="submit1">
                                             <label for="submit1">全选</label>
@@ -250,7 +250,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="ui-divider mb1"></div>
+                            <div class="ui-divider ui-mb1"></div>
                             <div class="form-row submit">
                                 <button type="submit" class="ui-button ui-button-success">提交</button>
                             </div>
