--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="src/icons/css/font-awesome.css" />
         <link rel="stylesheet" href="demo.css" />
     </head>
-    <body class="p2">
+    <body class="ui-m3">
         <h2 class="align-center no-mt">ESF</h2>
         <p>
             ESF是一个样式框架，它基于est。为开发者提供了一套可以简单定制的CSS样式。
