--- a/icons.html
+++ b/icons.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="src/icons/css/font-awesome.css" />
         <link rel="stylesheet" href="demo.css" />
     </head>
-    <body class="p2">
+    <body class="ui-m3">
         <h1 class="align-center">Icons</h1>
         <div id="layout" class="ui-g">
             <div class="ui-u-1-5">
@@ -25,7 +25,7 @@
                 </ul>
             </div>
             <div class="ui-u-4-5">
-                <div id="main" class="content p2 no-pt">
+                <div id="main" class="content ui-p2 ui-pt0">
                     <h2 id="icons" class="content-subhead">Icons</h2>
                     <div class="icons-list">
                         <h3>71 New Icons in 4.1</h3>
