--- a/input.html
+++ b/input.html
@@ -11,7 +11,7 @@
         <script src="assets/jquery-1.11.1.min.js"></script>
         <script src="assets/demo.js"></script>
     </head>
-    <body class="p2">
+    <body class="ui-m3">
         <div id="layout" class="ui-g">
             <div class="ui-u-1-5">
                 <ul id="navigator-features" class="ui-list-unstyled">
@@ -26,7 +26,7 @@
                 </ul>
             </div>
             <div class="ui-u-4-5">
-                <div id="main" class="content p2 no-pt">
+                <div id="main" class="content ui-p2 ui-pt0">
                     <h2 class="no-mt">输入框</h2>
                     <div class="ui-divider"></div>
                     <div>
@@ -96,25 +96,25 @@
                                     <i class="fa fa-search ui-icon"></i>
                                 </div>
                             </div>
-                            <div class="mt1">
+                            <div class="ui-mt1">
                                 <div class="ui-input right with-icon">
                                     <input type="text" placeholder="nomral">
                                     <i class="fa fa-search ui-icon"></i>
                                 </div>
                             </div>
-                            <div class="mt1">
+                            <div class="ui-mt1">
                                 <div class="ui-input right with-icon big">
                                     <input type="text" placeholder="big">
                                     <i class="fa fa-search ui-icon"></i>
                                 </div>
                             </div>
-                            <div class="mt1">
+                            <div class="ui-mt1">
                                 <div class="ui-input right with-icon huge">
                                     <input type="text" placeholder="huge">
                                     <i class="fa fa-search ui-icon"></i>
                                 </div>
                             </div>
-                            <div class="mt1">
+                            <div class="ui-mt1">
                                 <div class="ui-input right with-icon massive">
                                     <input type="text" placeholder="massive">
                                     <i class="fa fa-search ui-icon"></i>
@@ -123,12 +123,12 @@
                         </div>
                         <h3 id="input-textarea">Textarea</h3>
                         <div class="example">
-                            <div class="mt1">
+                            <div class="ui-mt1">
                                 <div class="ui-input fluid">
                                     <textarea placeholder="massive" rows="10"></textarea>
                                 </div>
                             </div>
-                            <div class="mt1">
+                            <div class="ui-mt1">
                                 <div class="ui-input">
                                     <textarea placeholder="massive" rows="8" cols="90"></textarea>
                                 </div>
@@ -144,7 +144,7 @@
                                 <input type="text" placeholder="massive"  />
                             </div>
                             
-                            <div class="ui-input action mt1">
+                            <div class="ui-input action ui-mt1">
                                 <input type="text" placeholder="massive"  />
                                 <div class="action-container">
                                     <button class="ui-button"><i class="ui-icon fa fa-users"></i></button>
@@ -154,7 +154,7 @@
 
                         <h3 id="input-buttons-group">输入框和按钮组合</h3>
                         <div class="example">
-                            <div class="mt1">
+                            <div class="ui-mt1">
                                 <div class="ui-input action small">
                                     <div class="action-container ui-button-group">
                                         <button type="button" class="ui-button">Left</button>
@@ -163,7 +163,7 @@
                                     <input type="text" placeholder="small"  />
                                 </div>
                             </div>
-                            <div class="mt1">
+                            <div class="ui-mt1">
                                 <div class="ui-input action large">
                                     <div class="action-container ui-button-group">
                                         <button type="button" class="ui-button">Left</button>
@@ -172,7 +172,7 @@
                                     <input type="text" placeholder="large"  />
                                 </div>
                             </div>
-                            <div class="mt1">
+                            <div class="ui-mt1">
                                 <div class="ui-input action massive">
                                     <div class="action-container ui-button-group">
                                         <button type="button" class="ui-button">Left</button>
