--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
         <script src="assets/jquery-1.11.1.min.js"></script>
         <script src="assets/demo.js"></script>
     </head>
-    <body class="p2">
+    <body class="ui-m3">
         <div id="layout" class="ui-g">
             <div class="ui-u-1-5">
                 <ul id="navigator-features" class="ui-list-unstyled">
@@ -24,7 +24,7 @@
                 </ul>
             </div>
             <div class="ui-u-4-5">
-                <div id="main" class="content p2 no-pt">
+                <div id="main" class="content ui-p2 ui-pt0">
                     <h2 class="no-mt">导航</h2>
                     <div class="ui-divider"></div>
                     <p>
@@ -122,7 +122,7 @@
                                 <li class="ui-menu-item ui-menu-separator-after"><a href="#">Disabled</a></li>
                             </ul>
                         </div>
-                        <div class="ui-menu vertical mt3" style="width: 30%;">
+                        <div class="ui-menu vertical ui-mt3" style="width: 30%;">
                             <ul>
                                 <li class="ui-menu-item ui-menu-separator-before ui-menu-separator-after"><a href="#"><i class="fa fa-home"></i> Home</a></li>
                                 <li class="ui-menu-item ui-menu-separator-after"><a href="#"><i class="fa fa-rocket"></i> CSS Nested Menu</a></li>
