--- a/progressbar.html
+++ b/progressbar.html
@@ -25,7 +25,7 @@
                 </ul>
             </div>
             <div class="ui-u-4-5">
-                <div id="main" class="content p2 no-pt">
+                <div id="main" class="content ui-p2 ui-pt0">
                     <h2>ESF Getting Started.</h2>
                 </div>
             </div>
