--- a/type.html
+++ b/type.html
@@ -12,7 +12,7 @@
         <script src="assets/jquery-1.11.1.min.js"></script>
         <script src="assets/demo.js"></script>
     </head>
-    <body class="p2">
+    <body class="ui-m3">
         <div id="layout" class="ui-g">
             <div class="ui-u-1-5">
                 <ul id="navigator-features" class="ui-list-unstyled">
@@ -36,7 +36,7 @@
                 </ul>
             </div>
             <div class="ui-u-4-5">
-                <div id="main" class="content p2 no-pt">
+                <div id="main" class="content ui-p2 ui-pt0">
                     <h2 id="icons" class="no-mt">基础字体样式</h2>
                     <div class="ui-divider"></div>
                     <div>
@@ -159,7 +159,7 @@
                         <div class="example">
                             <hr />
 
-                            <div class="ui-divider mt1"></div>
+                            <div class="ui-divider ui-mt1"></div>
                         </div>
 
                         <h3 id="type-quote-block">Quote block - 引用文字</h3>
@@ -261,7 +261,7 @@ inline code
                         </h3>
                         <div class="example">
                             <div class="truncate" style="width: 300px;">青春的光辉，理想的钥匙，生命的意义，乃至人类的生存、发展全包含在这两个字之中，奋斗！只有奋斗，才能治愈过去的创伤；只有奋斗，才是我们民族的希望和光明所在。</div>
-                            <div class="truncate2 mt1" style="width: 300px;">青春的光辉，理想的钥匙，生命的意义，乃至人类的生存、发展全包含在这两个字之中，奋斗！ 只有奋斗，才能治愈过去的创伤；只有奋斗，才是我们民族的希望和光明所在。</div>
+                            <div class="truncate2 ui-mt1" style="width: 300px;">青春的光辉，理想的钥匙，生命的意义，乃至人类的生存、发展全包含在这两个字之中，奋斗！ 只有奋斗，才能治愈过去的创伤；只有奋斗，才是我们民族的希望和光明所在。</div>
                         </div>
 
                         <h3 id="type-address">
@@ -273,7 +273,7 @@ inline code
                                 上地十街<br>
                                 电话： (123) 456-7890
                             </address>
-                            <address class="mt1">
+                            <address class="ui-mt1">
                                 <strong>姓名</strong><br />
                                 <a href="mailto:#">first.last@example.com</a>
                             </address>
